--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A node rest api project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,8 +22,5 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
   }
 }
